--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/MyLeaguesTile.razor
@@ -61,7 +61,7 @@
 
     private void ViewLeagueDashboard(int leagueId)
     {
-        NavigationManager.NavigateTo($"/leagues/{leagueId}/leaderboard");
+        NavigationManager.NavigateTo($"/leagues/{leagueId}/dashboard");
     }
 
     private static string GetStatusClass(LeagueMemberStatus status)
