--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -11,6 +11,7 @@
 @import url('loading.css');
 @import url('navbar.css');
 @import url('predictions.css');
+@import url('results-grid.css');
 @import url('tables.css');
 
 :root {
