Fix Google Login

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/Register.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/Register.razor
@@ -144,7 +144,7 @@
 
         var apiBaseUrl = Configuration["ApiBaseUrl"];
         var returnUrl = NavigationManager.BaseUri + "authentication/external-login-callback";
-        var googleLoginUrl = $"{apiBaseUrl}/auth/google-login?returnUrl={Uri.EscapeDataString(returnUrl)}&source=register";
+        var googleLoginUrl = $"{apiBaseUrl}/external-auth/google-login?returnUrl={Uri.EscapeDataString(returnUrl)}&source=register";
 
         NavigationManager.NavigateTo(googleLoginUrl, forceLoad: true);
     }
