Add Datadog in Production

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/ExternalLoginCallback.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/ExternalLoginCallback.razor
@@ -26,6 +26,7 @@
 
     // Check the browser's cookie jar
     const allCookies = document.cookie;
+    debugger;
 
     if (allCookies && allCookies.includes("refreshToken")) {
         console.log("%cSUCCESS: 'refreshToken' cookie found!", "color: green; font-weight: bold;");
